continuation of previous commit